--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alyaximadi",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ainadanali.space/",
+  "homepage": "https://glamhall.ainadanali.space/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
